--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,7 @@ trm_white="#c0caf5"
 trm_black="#414868"
 bg="#1a1b26"
 
+set -g prompt-cursor-colour "${trm_white}"
 set -g status-position top
 set -g status-left-length 100
 set -g base-index 1
